--- a/Build_a_survey_form/project/styles.css
+++ b/Build_a_survey_form/project/styles.css
@@ -1,3 +1,26 @@
 body{
     font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    font-weight:;
+    color: ;
+    position: fixed;
+    background-image:-o-linear-gradient();
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
+h1{
+    font-weight: ;
+
+}
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    background:;
+    color:;
+    border-radius: 2px;
+    cursor:pointer;
+  }
+  
